Clearing the account uri and account key once added

--- a/Cosmonaut.Scaler.Client/Pages/Index.cshtml
+++ b/Cosmonaut.Scaler.Client/Pages/Index.cshtml
@@ -207,6 +207,8 @@
 
         await LoadAccounts();
         await JSRuntime.Current.InvokeAsync<bool>("closeAddModal");
+        AccountUri = "";
+        AccountKey = "";
     }
 
     public async Task LoadDatabaseView(string databaseAccountUri)
